// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allOf operator renders allOf in request 1`] = `
[
  "## Request",
  "#||| **method** | **url** | **description** ||",
  "|| ",
  "\`\`\`",
  "POST",
  "\`\`\`",
  " | ",
  "\`\`\`",
  "http://localhost:8080/test",
  "\`\`\`",
  " | ",
  "\`\`\`",
  "Generated server url",
  "\`\`\`",
  " |||#",
  "#### Body",
  "{% cut "application/json" %}",
  "\`\`\`",
  "{",
  "    "type": "string",",
  "    "foo": "string",",
  "    "name": "string"",
  "}",
  "\`\`\`",
  "{% endcut %}",
  "#||| **Name** | **Type** | **Description** ||",
  "|| type | string |  ||",
  "|| foo | string |  ||",
  "|| name | string |  |||#",
]
`;

exports[`allOf operator renders allOf in response 1`] = `
[
  "## 200 OK",
  "Base 200 response",
  "#### Body",
  "{% cut "application/json" %}",
  "\`\`\`",
  "{",
  "    "type": "string",",
  "    "baz": "string"",
  "}",
  "\`\`\`",
  "{% endcut %}",
  "#||| **Name** | **Type** | **Description** ||",
  "|| type | string |  ||",
  "|| baz | string |  |||#",
]
`;

exports[`allOf operator save type of element from allOf in request 1`] = `
[
  "## Request",
  "#||| **method** | **url** | **description** ||",
  "|| ",
  "\`\`\`",
  "POST",
  "\`\`\`",
  " | ",
  "\`\`\`",
  "http://localhost:8080/single",
  "\`\`\`",
  " | ",
  "\`\`\`",
  "Generated server url",
  "\`\`\`",
  " |||#",
  "#### Body",
  "{% cut "application/json" %}",
  "\`\`\`",
  "{",
  "    "pet": {",
  "        "type": "string",",
  "        "foo": "string"",
  "    }",
  "}",
  "\`\`\`",
  "{% endcut %}",
  "#||| **Name** | **Type** | **Description** ||",
  "|| pet | [Cat](#cat) | Cat class |||#",
  "### Cat",
  "Cat class",
  "#||| **Name** | **Type** | **Description** ||",
  "|| type | string |  ||",
  "|| foo | string |  |||#",
]
`;

exports[`allOf operator save type of element from allOf in response 1`] = `
[
  "## Request",
  "#||| **method** | **url** | **description** ||",
  "|| ",
  "\`\`\`",
  "POST",
  "\`\`\`",
  " | ",
  "\`\`\`",
  "http://localhost:8080/single",
  "\`\`\`",
  " | ",
  "\`\`\`",
  "Generated server url",
  "\`\`\`",
  " |||#",
  "#### Body",
  "{% cut "application/json" %}",
  "\`\`\`",
  "{",
  "    "pet": {",
  "        "type": "string",",
  "        "foo": "string"",
  "    }",
  "}",
  "\`\`\`",
  "{% endcut %}",
  "#||| **Name** | **Type** | **Description** ||",
  "|| pet | [Cat](#cat) | Cat class |||#",
  "### Cat",
  "Cat class",
  "#||| **Name** | **Type** | **Description** ||",
  "|| type | string |  ||",
  "|| foo | string |  |||#",
]
`;
